--- a/BAMXapp/Base.lproj/Main.storyboard
+++ b/BAMXapp/Base.lproj/Main.storyboard
@@ -758,7 +758,8 @@
         <!--Profile View Controller-->
         <scene sceneID="qtp-Tf-MNe">
             <objects>
-                <viewController storyboardIdentifier="Profile edit" id="L3r-Q6-Lvc" customClass="ProfileViewController" sceneMemberID="viewController">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="h6s-v8-eZ2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <viewController storyboardIdentifier="ProfileViewController" id="L3r-Q6-Lvc" customClass="ProfileViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2Dc-Kr-BsK">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -801,7 +802,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="6cM-s6-QpW">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProfileCollectionViewCell" id="6cM-s6-QpW" customClass="ProfileCollectionViewCell" customModule="BAMXapp" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="146" height="179"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="6gb-Ca-Yjy">
@@ -827,7 +828,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
-                                            <color key="backgroundColor" red="0.99855524299999998" green="0.13170197610000001" blue="0.27643901110000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="backgroundColor" red="1" green="0.0" blue="0.28225067259999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstItem="W6L-Ss-BUI" firstAttribute="top" secondItem="6gb-Ca-Yjy" secondAttribute="top" constant="20" symbolic="YES" id="FSo-fk-NQQ"/>
@@ -842,6 +843,12 @@
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="146" height="179"/>
+                                        <connections>
+                                            <outlet property="backgroundColorView" destination="6gb-Ca-Yjy" id="XRQ-hz-KJu"/>
+                                            <outlet property="numberBox" destination="taf-pJ-fEp" id="Kx2-vL-BgM"/>
+                                            <outlet property="titleBox" destination="W6L-Ss-BUI" id="gX9-Je-noF"/>
+                                            <outlet property="updateBox" destination="lTz-EQ-kMY" id="DUX-vu-XcO"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -924,7 +931,6 @@
                         </constraints>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="h6s-v8-eZ2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2869.5652173913045" y="783.48214285714278"/>
         </scene>
